fix error when -spacing is 0

--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -84,7 +84,11 @@ $buttongroup-expand-max: 6 !default;
         &:first-child:nth-last-child(#{$i}) {
           &, &:first-child:nth-last-child(#{$i}) ~ #{$selector} {
             display: inline-block;
-            width: calc(#{percentage(1 / $i)} - #{$buttongroup-spacing});
+            @if #{$buttongroup-spacing} == '0' {
+              width: #{percentage(1 / $i)};
+            } @else {
+              width: calc(#{percentage(1 / $i)} - #{$buttongroup-spacing});
+            }
             margin-right: $buttongroup-spacing;
           }
         }
